@@ -1,0 +1,19 @@
+# sample.conf -- plugin definition file for plugin: sample
+#
+# $Id$
+
+# name of the plugin
+$NAME='sample';
+
+# name of menu where to append commands
+$MENU='login';
+
+# commands to append to menu
+$MENUDATA=[
+	   [],
+	   ['Database Status','sub=DBstatus','DBstatus'],
+	  ];
+
+1;
+
+# eof :-)
