@@ -1,6 +1,8 @@
 $Id$
 
 0.7.1beta
+	- initial "plugin" support for CGI interface 
+	  (one sample/test plugin provided as an example)
 	- new command "Clear Defaults" in web interface
 	  patch by Michael S. Liebman <m-liebman@northwestern.edu>
 	- status command now detecs also zone/server changes
